--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
 }
 
 android {
@@ -34,8 +35,16 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'com.google.maps:google-maps-services:0.1.2'
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
+    implementation 'org.slf4j:slf4j-simple:1.7.25'
+    implementation 'com.google.maps.android:android-maps-utils:0.5'
+    implementation 'com.android.support.test:rules:1.0.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    compile "com.google.android.gms:play-services-location:11.0.1"
+    implementation 'com.google.android.gms:play-services-maps:11.8.0'
+    androidTestImplementation 'com.android.support.test:runner:1.0.1'
+
 }
